# Adimplere

./: README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: pyhton.yml
src/: asgi.py  config.py  main.py
src/games/: exceptions.py  service.py
src/games/domain/: model.py
src/games/entrypoints/: api.py
src/games/entrypoints/schemas/: output.py
src/tests/: test_main.py
